--- a/chongWuKongJing/app/src/main/res/layout/fragment_userinfo_set.xml
+++ b/chongWuKongJing/app/src/main/res/layout/fragment_userinfo_set.xml
@@ -12,9 +12,10 @@
         android:layout_height="96dp"
         android:layout_gravity="center"
         android:layout_marginTop="50dp"
-        android:background="@color/qmui_config_color_blue"
+        android:src="@drawable/touxiang"
+
         app:civ_border_width="2dp"
-        app:civ_border_color="@color/qmui_config_color_blue"/>
+        app:civ_border_color="@color/white"/>
 
     <TextView
         android:id="@+id/textView6"
@@ -24,7 +25,7 @@
         android:layout_marginTop="15dp"
         android:gravity="center"
         android:textSize="18dp"
-        android:text="name" />
+        android:text="pita" />
 
     <View
         android:layout_width="match_parent"
@@ -34,63 +35,80 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="451dp"
         android:layout_marginTop="60dp"
+        android:layout_weight="1"
         android:orientation="vertical">
 
-    <com.qmuiteam.qmui.widget.grouplist.QMUICommonListItemView
-        android:id="@+id/group_list_item_kefu"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/qmui_list_item_height"
-        app:qmui_accessory_type="chevron"
-        app:qmui_orientation="vertical"
-        app:qmui_commonList_titleColor="@color/qmui_s_link_color"
-        app:qmui_commonList_detailColor="@color/qmui_config_color_red"/>
+        <com.qmuiteam.qmui.widget.grouplist.QMUICommonListItemView
+            android:id="@+id/group_list_item_kefu"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/qmui_list_item_height"
+            android:layout_weight="1"
+            app:qmui_accessory_type="chevron"
+            app:qmui_commonList_detailColor="@color/qmui_config_color_red"
+            app:qmui_commonList_titleColor="@color/qmui_s_link_color"
+            app:qmui_orientation="vertical" />
 
-    <com.qmuiteam.qmui.widget.grouplist.QMUICommonListItemView
-        android:id="@+id/group_list_item_shouhoufuwu"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/qmui_list_item_height"
-        app:qmui_accessory_type="chevron"
-        app:qmui_orientation="vertical"
-        app:qmui_commonList_titleColor="@color/qmui_s_link_color"
-        app:qmui_commonList_detailColor="@color/qmui_config_color_red"/>
 
-    <com.qmuiteam.qmui.widget.grouplist.QMUICommonListItemView
-        android:id="@+id/group_list_item_wodewuliu"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/qmui_list_item_height"
-        app:qmui_accessory_type="chevron"
-        app:qmui_orientation="vertical"
-        app:qmui_commonList_titleColor="@color/qmui_s_link_color"
-        app:qmui_commonList_detailColor="@color/qmui_config_color_red"/>
 
-    <com.qmuiteam.qmui.widget.grouplist.QMUICommonListItemView
-        android:id="@+id/group_list_item_changjianwenti"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/qmui_list_item_height"
-        app:qmui_accessory_type="chevron"
-        app:qmui_orientation="vertical"
-        app:qmui_commonList_titleColor="@color/qmui_s_link_color"
-        app:qmui_commonList_detailColor="@color/qmui_config_color_red"/>
+        <com.qmuiteam.qmui.widget.grouplist.QMUICommonListItemView
+            android:id="@+id/group_list_item_gegngaishebeimignc"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/qmui_list_item_height"
+            android:layout_weight="1"
+            app:qmui_accessory_type="chevron"
+            app:qmui_commonList_detailColor="@color/qmui_config_color_red"
+            app:qmui_commonList_titleColor="@color/qmui_s_link_color"
+            app:qmui_orientation="vertical" />
 
-    <com.qmuiteam.qmui.widget.grouplist.QMUICommonListItemView
-        android:id="@+id/group_list_item_geiwomenliuyan"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/qmui_list_item_height"
-        app:qmui_accessory_type="chevron"
-        app:qmui_orientation="vertical"
-        app:qmui_commonList_titleColor="@color/qmui_s_link_color"
-        app:qmui_commonList_detailColor="@color/qmui_config_color_red"/>
+        <com.qmuiteam.qmui.widget.grouplist.QMUICommonListItemView
+            android:id="@+id/group_list_item_shouhoufuwu"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/qmui_list_item_height"
+            android:layout_weight="1"
+            app:qmui_accessory_type="chevron"
+            app:qmui_commonList_detailColor="@color/qmui_config_color_red"
+            app:qmui_commonList_titleColor="@color/qmui_s_link_color"
+            app:qmui_orientation="vertical" />
 
-    <com.qmuiteam.qmui.widget.grouplist.QMUICommonListItemView
-        android:id="@+id/group_list_item_richangweihushouce"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/qmui_list_item_height"
-        app:qmui_accessory_type="chevron"
-        app:qmui_orientation="vertical"
-        app:qmui_commonList_titleColor="@color/qmui_s_link_color"
-        app:qmui_commonList_detailColor="@color/qmui_config_color_red"/>
+
+        <com.qmuiteam.qmui.widget.grouplist.QMUICommonListItemView
+            android:id="@+id/group_list_item_genggaimima"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/qmui_list_item_height"
+            android:layout_weight="1"
+            app:qmui_accessory_type="chevron"
+            app:qmui_commonList_detailColor="@color/qmui_config_color_red"
+            app:qmui_commonList_titleColor="@color/qmui_s_link_color"
+            app:qmui_orientation="vertical" />
+
+        <com.qmuiteam.qmui.widget.grouplist.QMUICommonListItemView
+            android:id="@+id/group_list_item_changjianwenti"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/qmui_list_item_height"
+            android:layout_weight="1"
+            app:qmui_accessory_type="chevron"
+            app:qmui_commonList_detailColor="@color/qmui_config_color_red"
+            app:qmui_commonList_titleColor="@color/qmui_s_link_color"
+            app:qmui_orientation="vertical" />
+
+
+        <com.qmuiteam.qmui.widget.grouplist.QMUICommonListItemView
+            android:id="@+id/group_list_item_richangweihushouce"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/qmui_list_item_height"
+            android:layout_weight="1"
+            app:qmui_accessory_type="chevron"
+            app:qmui_commonList_detailColor="@color/qmui_config_color_red"
+            app:qmui_commonList_titleColor="@color/qmui_s_link_color"
+            app:qmui_orientation="vertical" />
 
     </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="134dp"
+        android:layout_marginTop="10dp"
+        android:background="@color/btn_filled_blue_bg_disabled" />
 </LinearLayout>
